# maat

./: .gitignore  LICENSE  README.md  convert_errors.json  pyproject.toml
data/: HD017877.xml  HD056774.xml  aegyptus.89.240.xml
maat/: converter.py  create.py  utils.py
script/: convert
tests/: test_converter.py  test_utils.py
