[tool.poetry]
name = "maat"
version = "0.1.0"
description = ""
authors = ["Will Fitzgerald <willf@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
lxml = "^5.2.2"
lingua-language-detector = "^2.0.2"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.1.0"
pytest = "^8.2.2"
isort = "^5.13.2"
coverage = "^7.5.4"
ipython = "^8.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
